BeamableServices/services/StepH-Flow/EventScript/Parser/EventScriptParser.cs
using System;
using System.Collections.Generic;
using System.Globalization;
using System.Linq;
using System.Security.Cryptography;
using System.Text;
using static StepH.Flow.EventScript.Parser.EventScriptTokenKind;

namespace StepH.Flow.EventScript.Parser;


/// <summary>
/// A utility class responsible for parsing Event Script source code into a structured syntax tree.
/// This class serves as the entry point for transforming raw script strings
/// into an abstract representation of the script for further processing or compilation.
/// </summary>
public sealed class EventScriptParser
{
    /// <summary>
    /// Parses the provided Event Script string into an EventScriptModule, which represents the root node of the syntax tree.
    /// </summary>
    /// <param name="script">The Event Script source code to be parsed.</param>
    /// <param name="sourceName">An optional source name used for diagnostics.</param>
    /// <returns>An <see cref="EventScriptModule"/> representing the parsed syntax tree structure.</returns>
    public static EventScriptModule Parse(string script, string? sourceName = null)
    {
        _ = script ?? throw new ArgumentNullException(nameof(script));

        var normalizedScript = script.Replace("\r\n", "\n").Replace('\r', '\n');
        var hash = ComputeShortHash(normalizedScript);
        var rawTokens = new EventScriptLexer(normalizedScript).Tokenize().ToList();
        var moduleName = TryResolveModuleName(rawTokens) ?? $"AnonymousModule_{hash}";
        var resolvedSourceName = string.IsNullOrWhiteSpace(sourceName) ? $"UnknownSource_{hash}" : sourceName!;
        var tokens = new List<EventScriptToken>();
        var initialErrors = new List<EventScriptSyntaxError>();
        foreach (var token in rawTokens)
        {
            if (token.Kind == Illegal)
            {
                initialErrors.Add(new EventScriptSyntaxError(
                    $"Illegal token '{token.Text}'",
                    moduleName,
                    EventScriptSyntaxErrorKind.Lexer,
                    new EventScriptSourceLocation(resolvedSourceName, token.Line, token.Column, token.EndLine, token.EndColumn, moduleName)));
                continue;
            }

            tokens.Add(token);
        }

        return new EventScriptParser(tokens, moduleName, resolvedSourceName, initialErrors)
            .ParseEventScript();
    }

    private static readonly HashSet<string> CollectionCombineOperators = new(StringComparer.Ordinal)
    {
        "intersect",
        "combine",
        "merge",
        "except",
        "zip"
    };

    private sealed class EventScriptParseException(string message, int line, int column) : Exception($"{message} (line {line}, col {column})")
    {
        public int Line { get; } = line;
        public int Column { get; } = column;
        public int EndLine { get; } = line;
        public int EndColumn { get; } = column;

        public EventScriptParseException(string message, EventScriptToken token)
            : this(message, token.Line, token.Column, token.EndLine, token.EndColumn)
        {
        }

        public EventScriptParseException(string message, int line, int column, int endLine, int endColumn)
            : this(message, line, column)
        {
            EndLine = endLine;
            EndColumn = endColumn;
        }
    }

    private readonly IReadOnlyList<EventScriptToken> _tokens;
    private readonly string _moduleName;
    private readonly string _sourceName;
    private readonly List<EventScriptSyntaxError> _errors;
    private int _index;

    private EventScriptParser(IReadOnlyList<EventScriptToken> tokens, string moduleName, string sourceName, IReadOnlyList<EventScriptSyntaxError> initialErrors)
    {
        _tokens = tokens;
        _moduleName = moduleName;
        _sourceName = sourceName;
        _errors = initialErrors?.ToList() ?? [];
    }

    private EventScriptSourceLocation CreateRange(EventScriptToken token)
        => new(_sourceName, token.Line, token.Column, token.EndLine, token.EndColumn, _moduleName);

    private EventScriptSourceLocation CreateRange(EventScriptToken start, EventScriptToken end)
        => new(_sourceName, start.Line, start.Column, end.EndLine, end.EndColumn, _moduleName);

    private EventScriptSourceLocation? MergeRanges(EventScriptNode? first, EventScriptNode? last = null)
    {
        var start = first?.SourceRange;
        var end = (last ?? first)?.SourceRange;
        if (start is null || end is null || start.Line is null || start.Column is null)
        {
            return null;
        }

        var endLine = end.EndLine ?? end.Line;
        var endColumn = end.EndColumn ?? end.Column;
        return endLine is null || endColumn is null
            ? null
            : new EventScriptSourceLocation(_sourceName, start.Line, start.Column, endLine, endColumn, _moduleName);
    }

    private T WithRange<T>(T node, EventScriptToken startToken) where T : EventScriptNode
        => node with { SourceRange = CreateRange(startToken, Previous) };

    private T WithRange<T>(T node, EventScriptToken startToken, EventScriptToken endToken) where T : EventScriptNode
        => node with { SourceRange = CreateRange(startToken, endToken) };

    private T WithRange<T>(T node, EventScriptNode? first, EventScriptNode? last = null) where T : EventScriptNode
        => node with { SourceRange = MergeRanges(first, last) };

    private EventScriptModule ParseEventScript()
    {
        var typeDefinitions = new List<TypeDefinitionNode>();
        var ruleDefinitions = new List<RuleDefinitionNode>();
        var selectDefinitions = new List<SelectDefinitionNode>();
        var handlers = new List<EventHandlerNode>();
        SkipStatementSeparators();
        ParseOptionalModuleDeclaration();
        SkipStatementSeparators();
        while (!Is(EndOfFile))
        {
            try
            {
                if (Match(Record))
                {
                    typeDefinitions.Add(ParseTypeDefinition());
                }
                else if (Match(Rule))
                {
                    ruleDefinitions.Add(ParseRuleDefinition());
                }
                else if (Match(Select))
                {
                    selectDefinitions.Add(ParseSelectDefinition());
                }
                else
                {
                    handlers.Add(ParseEventHandler());
                }

                RequireHandlerSeparatorOrEndOfFile();
                SkipStatementSeparators();
            }
            catch (EventScriptParseException ex)
            {
                AddParseError(ex);
                SynchronizeTopLevel();
            }
        }

        if (_errors.Count > 0)
        {
            throw new EventScriptSyntaxException(_errors);
        }

        var module = new EventScriptModule(_moduleName, _sourceName, typeDefinitions, ruleDefinitions, selectDefinitions, handlers);
        var firstToken = _tokens.FirstOrDefault();
        if (firstToken.Kind == EndOfFile)
        {
            return module with { SourceRange = CreateRange(firstToken) };
        }

        var lastToken = _tokens.LastOrDefault(token => token.Kind != EndOfFile);
        return module with { SourceRange = CreateRange(firstToken, lastToken) };
    }

    private static string ComputeShortHash(string text)
    {
        using var sha256 = SHA256.Create();
        var bytes = sha256.ComputeHash(Encoding.UTF8.GetBytes(text));
        return BitConverter.ToString(bytes, 0, 4).Replace("-", string.Empty, StringComparison.Ordinal);
    }

    private static string? TryResolveModuleName(IReadOnlyList<EventScriptToken> tokens)
    {
        var index = 0;
        while (index < tokens.Count && tokens[index].Kind == NewLine)
        {
            index++;
        }

        if (index >= tokens.Count || tokens[index].Kind != Module)
        {
            return null;
        }

        index++;
        while (index < tokens.Count && tokens[index].Kind == NewLine)
        {
            index++;
        }

        if (index >= tokens.Count)
        {
            return null;
        }

        return tokens[index].Kind switch
        {
            Identifier or Message => tokens[index].Text,
            _ => null
        };
    }

    private void ParseOptionalModuleDeclaration()
    {
        if (!Match(Module))
        {
            return;
        }

        SkipNewLines();
        if (Current.Kind is not (Identifier or Message))
        {
            throw new EventScriptParseException($"Expected module name but found {Current.Kind}", Current.Line, Current.Column);
        }

        Advance();
    }

    private TypeDefinitionNode ParseTypeDefinition()
    {
        var startToken = Previous;
        var name = ParseTypeName();
        Expect(As);
        SkipNewLines();
        Expect(LeftBrace);
        SkipStatementSeparators();

        var fields = new List<TypeFieldDefinitionNode>();
        while (!Is(RightBrace))
        {
            fields.Add(ParseTypeFieldDefinition());
            if (Match(Comma))
            {
                SkipStatementSeparators();
                continue;
            }

            SkipStatementSeparators();
        }

        Expect(RightBrace);
        return WithRange(new TypeDefinitionNode(name, fields), startToken);
    }

    private TypeFieldDefinitionNode ParseTypeFieldDefinition()
    {
        var startToken = Current;
        var name = ExpectIdentifier();
        Expect(Colon);
        SkipNewLines();
        var typeName = ParseTypeName();
        SkipNewLines();

        ExpressionNode? minimumExpression = null;
        ExpressionNode? maximumExpression = null;
        ExpressionNode? computedExpression = null;

        if (MatchWord("clamped"))
        {
            ExpectWord("between");
            minimumExpression = ParseEqualityExpression();
            Expect(And);
            maximumExpression = ParseEqualityExpression();
            SkipNewLines();
        }

        if (MatchWord("computed"))
        {
            ExpectWord("by");
            computedExpression = ParseExpression();
        }

        return WithRange(new TypeFieldDefinitionNode(name, typeName, minimumExpression, maximumExpression, computedExpression), startToken);
    }

    private RuleDefinitionNode ParseRuleDefinition()
    {
        var startToken = Previous;
        var name = ExpectIdentifier();
        var parameters = ParseDefinitionParameters();
        Expect(Means);
        SkipNewLines();
        var expression = ParseExpression();
        return WithRange(new RuleDefinitionNode(name, parameters, expression), startToken);
    }

    private SelectDefinitionNode ParseSelectDefinition()
    {
        var startToken = Previous;
        var name = ExpectIdentifier();
        var parameters = ParseDefinitionParameters();
        Expect(Means);
        SkipNewLines();
        var expression = ParseExpression();
        return WithRange(new SelectDefinitionNode(name, parameters, expression), startToken);
    }

    private IReadOnlyList<string> ParseDefinitionParameters()
    {
        var parameters = new List<string>();
        Expect(LeftParen);
        if (!Is(RightParen))
        {
            parameters.Add(ExpectIdentifier());
            while (Match(Comma))
            {
                parameters.Add(ExpectIdentifier());
            }
        }

        Expect(RightParen);
        return parameters;
    }

    private EventHandlerNode ParseEventHandler()
    {
        var startToken = Current;
        Expect(On);
        SkipNewLines();
        var message = Expect(Message).Text;

        var parameters = new List<string>();
        if (Match(LeftParen))
        {
            if (!Is(RightParen))
            {
                parameters.Add(ExpectIdentifier());
                while (Match(Comma))
                {
                    parameters.Add(ExpectIdentifier());
                }
            }

            Expect(RightParen);
        }

        SkipNewLines();
        Expect(LeftBrace);
        var statements = ParseStatementsUntil(RightBrace);
        Expect(RightBrace);

        return WithRange(new EventHandlerNode(message, parameters, statements), startToken);
    }

    private IReadOnlyList<StatementNode> ParseStatementsUntil(EventScriptTokenKind closingKind)
    {
        var statements = new List<StatementNode>();
        SkipStatementSeparators();

        while (!Is(closingKind))
        {
            if (Is(EndOfFile))
            {
                var token = Current;
                AddParseError(new EventScriptParseException($"Expected '{closingKind}' before end of input", token.Line, token.Column));
                return statements;
            }

            try
            {
                statements.Add(ParseStatement());
                RequireStatementSeparatorOrClosing(closingKind);
            }
            catch (EventScriptParseException ex)
            {
                AddParseError(ex);
                if (!SynchronizeStatement(closingKind))
                {
                    return statements;
                }
            }
        }

        return statements;
    }

    private StatementNode ParseStatement()
    {
        if (IsSeededRandomStatementStart())
        {
            return ParseSeededRandomStatement();
        }

        if (Match(Publish))
        {
            return ParsePublishStatement();
        }

        if (Match(Let))
        {
            return ParseLetStatement();
        }

        if (Match(If))
        {
            return ParseIfStatement();
        }

        if (Match(For))
        {
            return ParseForStatement();
        }

        var expression = ParseExpression();
        return WithRange(new ExpressionStatementNode(expression), expression);
    }

    private PublishStatementNode ParsePublishStatement()
    {
        var startToken = Previous;
        SkipNewLines();
        var messageExpression = ParsePublishMessageExpression();
        return WithRange(new PublishStatementNode(messageExpression), startToken);
    }

    private ExpressionNode ParsePublishMessageExpression()
    {
        if (Current.Kind == Message)
        {
            return ParseMessageLiteralExpressionCore();
        }

        return ParseExpression();
    }

    private NamedArgumentNode ParseNamedArgument()
    {
        var startToken = Current;
        var name = ExpectIdentifier();
        Expect(Colon);
        var expression = ParseExpression();
        return WithRange(new NamedArgumentNode(name, expression), startToken);
    }

    private LetStatementNode ParseLetStatement()
    {
        var startToken = Previous;
        var identifier = ExpectIdentifier();
        string? declaredType = null;
        if (Match(As))
        {
            SkipNewLines();
            declaredType = ParseTypeName();
        }

        if (Match(Be))
        {
            var expression = ParseExpression();
            return WithRange(new LetStatementNode(identifier, declaredType, expression), startToken);
        }
        var token = Current;
        throw new EventScriptParseException($"Expected {Be} but found {token.Kind}", token.Line, token.Column);
    }

    private IfStatementNode ParseIfStatement()
    {
        var startToken = Previous;
        var condition = ParseExpression();
        var thenBody = ParseStatementBody();

        StatementBodyNode? elseBody = null;
        if (IsElseClauseStart())
        {
            SkipNewLines();
            Expect(Else);
            elseBody = ParseStatementBody();
        }

        return WithRange(new IfStatementNode(condition, thenBody, elseBody), startToken);
    }

    private ForStatementNode ParseForStatement()
    {
        var startToken = Previous;
        var identifier = ExpectIdentifier();
        SkipNewLines();
        IterationSourceNode source;
        if (Match(In))
        {
            SkipNewLines();
            if (Current.Kind == Identifier && string.Equals(Current.Text, "from", StringComparison.Ordinal))
            {
                throw new EventScriptParseException("Direct ranges are not allowed after 'in'; use 'for item from ... to ...' or iterate a range variable", Current.Line, Current.Column);
            }

            var sourceStart = Current;
            source = WithRange(new CollectionIterationSourceNode(ParseExpression()), sourceStart);
        }
        else if (MatchWord("from"))
        {
            var fromToken = Previous;
            source = WithRange(new RangeIterationSourceNode(ParseRangeExpressionCore()), fromToken);
        }
        else
        {
            var token = Current;
            throw new EventScriptParseException($"Expected {In} or 'from' but found {token.Text}", token.Line, token.Column);
        }

        var body = ParseStatementBody();
        return WithRange(new ForStatementNode(identifier, source, body), startToken);
    }

    private SeededRandomStatementNode ParseSeededRandomStatement()
    {
        var startToken = Current;
        Expect(Tag);
        SkipNewLines();
        Expect(With);
        SkipNewLines();
        var seedExpression = ParseExpression();
        var body = ParseStatementBody();
        return WithRange(new SeededRandomStatementNode(seedExpression, body), startToken);
    }

    private StatementBodyNode ParseStatementBody()
    {
        var startToken = Current;
        SkipNewLines();
        if (Match(LeftBrace))
        {
            var statements = ParseStatementsUntil(RightBrace);
            Expect(RightBrace);
            return WithRange(new StatementBodyNode(true, statements), startToken);
        }

        return WithRange(new StatementBodyNode(false, new[] { ParseStatement() }), startToken);
    }

    private ExpressionNode ParseExpression() => ParseGuardedChoiceExpression();

    private ExpressionNode ParseGuardedChoiceExpression()
    {
        var expression = ParseDefaultExpression();
        if (Match(When))
        {
            var branches = new List<GuardedChoiceBranchNode>();
            var conditionExpression = ParseDefaultExpression();
            branches.Add(new GuardedChoiceBranchNode(expression, conditionExpression));

            while (Match(Comma))
            {
                SkipNewLines();
                if (Is(Otherwise))
                {
                    break;
                }

                Match(Or);
                SkipNewLines();

                var branchValue = ParseDefaultExpression();
                SkipNewLines();
                Expect(When);
                SkipNewLines();
                var branchCondition = ParseDefaultExpression();
                branches.Add(new GuardedChoiceBranchNode(branchValue, branchCondition));
            }

            SkipNewLines();
            Expect(Otherwise);
            SkipNewLines();
            var otherwiseExpression = ParseDefaultExpression();
            expression = WithRange(new GuardedChoiceExpressionNode(branches, otherwiseExpression), expression, otherwiseExpression);
        }

        return expression;
    }

    private ExpressionNode ParseDefaultExpression()
    {
        var expression = ParseCollectionCombineExpression();

        while (Current.Kind == Tag && string.Equals(Current.Text, ":default", StringComparison.Ordinal))
        {
            Advance();
            var op = "default";
            SkipNewLines();
            var right = ParseCollectionCombineExpression();
            expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
        }

        return expression;
    }

    private ExpressionNode ParseCollectionCombineExpression()
    {
        var expression = ParseOrExpression();

        while (Current.Kind == Tag &&
               CollectionCombineOperators.Contains(Current.Text[1..]))
        {
            var op = Current.Text[1..];
            Advance();
            SkipNewLines();
            var right = ParseOrExpression();
            expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
        }

        return expression;
    }

    private ExpressionNode ParseOrExpression()
    {
        var expression = ParseXorExpression();

        while (Match(Or))
        {
            var op = "|";
            SkipNewLines();
            var right = ParseXorExpression();
            expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
        }

        return expression;
    }

    private ExpressionNode ParseXorExpression()
    {
        var expression = ParseAndExpression();

        while (Match(Xor))
        {
            var op = "^";
            SkipNewLines();
            var right = ParseAndExpression();
            expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
        }

        return expression;
    }

    private ExpressionNode ParseAndExpression()
    {
        var expression = ParseEqualityExpression();

        while (Match(And))
        {
            var op = "&";
            SkipNewLines();
            var right = ParseEqualityExpression();
            expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
        }

        return expression;
    }

    private ExpressionNode ParseEqualityExpression()
    {
        var expression = ParseMembershipExpression();

        while (Match(Equal, NotEqual))
        {
            var op = Previous.Text;
            SkipNewLines();
            var right = ParseMembershipExpression();
            expression = new BinaryExpressionNode(expression, op, right);
        }

        return expression;
    }

    private ExpressionNode ParseMembershipExpression()
    {
        var expression = ParseTypeOperationExpression();

        while (true)
        {
            if (Match(Has))
            {
                SkipNewLines();
                ExpectValueWord();
                expression = WithRange(new UnaryExpressionNode("has value", expression), expression);
                continue;
            }

            if (Match(In))
            {
                var op = Previous.Text;
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
                continue;
            }

            if (IsValueInOperator())
            {
                Advance();
                SkipNewLines();
                Expect(In);
                var op = "value in";
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
                continue;
            }

            if (Match(Starts))
            {
                SkipNewLines();
                Expect(With);
                var op = "starts with";
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
                continue;
            }

            if (Match(Ends))
            {
                SkipNewLines();
                Expect(With);
                var op = "ends with";
                SkipNewLines();
                var right = ParseTypeOperationExpression();
                expression = WithRange(new BinaryExpressionNode(expression, op, right), expression, right);
                continue;
            }

            break;
        }

        return expression;
    }

    private DicePatternNode ParseDicePattern()
    {
        if (MatchWord("pair"))
        {
            var startToken = Previous;
            SkipNewLines();
            if (MatchWord("of"))
            {
                SkipNewLines();
                return WithRange(new DiceCountPatternNode(2, ParsePatternFace()), startToken);
            }

            return WithRange(new DiceCountPatternNode(2, null), startToken);
        }

        if (MatchWord("three"))
        {
            return ParseOfPattern(3);
        }

        if (MatchWord("four"))
        {
            return ParseOfPattern(4);
        }

        if (MatchWord("five"))
        {
            return ParseOfPattern(5);
        }

        if (MatchWord("six"))
        {
            return ParseOfPattern(6);
        }

        if (MatchWord("seven"))
        {
            return ParseOfPattern(7);
        }

        if (MatchWord("full"))
        {
            var startToken = Previous;
            SkipNewLines();
            ExpectWord("house");
            return WithRange(new DiceFullHousePatternNode(), startToken);
        }

        if (MatchWord("straight"))
        {
            return WithRange(new DiceStraightPatternNode(), Previous);
        }

        var token = Current;
        throw new EventScriptParseException($"Expected dice pattern but found {token.Text}", token.Line, token.Column);
    }

    private DicePatternNode ParseOfPattern(int count)
    {
        var startToken = Previous;
        SkipNewLines();
        ExpectWord("of");
        SkipNewLines();

        if (MatchWord("a"))
        {
            SkipNewLines();
            ExpectWord("kind");
            return WithRange(new DiceCountPatternNode(count, null), startToken);
        }

        return WithRange(new DiceCountPatternNode(count, ParsePatternFace()), startToken);
    }

    private ExpressionNode ParsePatternFace() => ParseUnaryExpression();

    private ExpressionNode ParseTypeOperationExpression()
    {
        var expression = ParseRelationalExpression();

        while (true)
        {
            if (Match(EventScriptTokenKind.Is))
            {
                SkipNewLines();
                if (Is(Tag))
                {
                    var typeName = ParseTypeName();
                    expression = WithRange(new TypeCheckExpressionNode(expression, typeName), expression);
                    continue;
                }

                if (Match(Empty))
                {
                    expression = WithRange(new UnaryExpressionNode("empty", expression), expression);
                    continue;
                }

                if (MatchWord("at"))
                {
                    SkipNewLines();
                    if (MatchWord("least"))
                    {
                        SkipNewLines();
                        var right = ParseRelationalComparisonOperand();
                        expression = WithRange(new BinaryExpressionNode(expression, ">=", right), expression, right);
                        continue;
                    }

                    if (MatchWord("most"))
                    {
                        SkipNewLines();
                        var right = ParseRelationalComparisonOperand();
                        expression = WithRange(new BinaryExpressionNode(expression, "<=", right), expression, right);
                        continue;
                    }

                    var token = Current;
                    throw new EventScriptParseException($"Expected least or most but found {token.Text}", token.Line, token.Column);
                }

                if (Current.Kind == Identifier)
                {
                    var ruleName = Advance().Text;
                    expression = WithRange(new RulePredicateExpressionNode(expression, ruleName), expression);
                    continue;
                }
